# static-id

./: CHANGELOG.md  Cargo.toml  README.md
benches/: string_creation.rs
src/: lib.rs  prelude.rs  static_id.rs  symbol.rs
tests/: equality.rs  hashmap.rs  multi_thread.rs  serde.rs
