[package]
name = "static-id"
version = "0.2.1"
edition = "2021"
authors = ["JunbeomL22 <your.email@example.com>"]
description = "A memory-efficient library for handling interned identifiers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JunbeomL22/static-id"
keywords = ["identifier", "memory-efficient", "performance"]

[[bench]]
name = "string_creation"
harness = false

[dependencies]
once_cell = "1.20"
rustc-hash = "2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
criterion = "0.5"